<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <include
                android:id="@+id/searchBar"
                layout="@layout/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                app:hint="@{@string/search_hint_artist}" />

            <include
                android:id="@+id/btnSwapOrder"
                layout="@layout/swap_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbAlbumList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMusicians"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/llEmptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/ivEmptyState"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:alpha="0.5"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_artists"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tvEmptyState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/no_artists_found"
                    android:textAlignment="center"
                    android:textColor="@color/silver_chalice"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</layout>