...

                <TextView
                    android:id="@+id/tvEmptyState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/error_loading_content"
                    android:textAlignment="center"
                    android:textColor="@color/silver_chalice"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>

...
